# FoodClassification

./: Machine Learning Final Project (1).ipynb  Machine Learning Final Project.ipynb  README.md  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
FOODCLASSIFICATION/: app.py  scraper.py
FOODCLASSIFICATION/.streamlit/: config.toml
FOODCLASSIFICATION/app/: app.py  requirements.txt
FOODCLASSIFICATION/app/.streamlit/: app.py  config.toml
FOODCLASSIFICATION/upload_images/: th.jfif
