[tool.poetry]
name = "foodclassification"
version = "0.1.0"
description = ""
authors = ["jakem <mazurkiewiczj@duq.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7,<3.11"
numpy = "^1.26.4"
requests = "^2.31.0"
bs4 = "^0.0.2"
pillow = "^10.2.0"
streamlit = "1.15.0"
keras = "2.9.0"
protobuf = ">=3.9.2,<3.20"
pandas = "^2.2.1"
tensorflow-io-gcs-filesystem = {version = "0.27.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
