[tool.poetry]
name = "foodclassification"
version = "0.1.0"
description = ""
authors = ["jakem <mazurkiewiczj@duq.edu>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
tensorflow-io-gcs-filesystem = { version = "0.27.0"}
tensorflow = "^2.16.1"
pillow = "^10.2.0"
bs4 = "^0.0.2"
requests = "^2.31.0"
keras = "^3.0.5"
numpy = "^1.26.4"
streamlit = "1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
